feat(gradle): add UpgradeAction for gradle 8.13